--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "store",
+  "name": "shop",
   "version": "1.0.0",
   "description": "store",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": " concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,16 @@
   "bugs": {
     "url": "https://github.com/TropicalPunch/SHOP/issues"
   },
-  "homepage": "https://github.com/TropicalPunch/SHOP#readme"
+  "homepage": "https://github.com/TropicalPunch/SHOP#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
+  }
 }
