--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-redux": "^7.2.1",
     "react-resizable": "^1.11.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
